flask_app/static/css/style.css
/* ... */
thead{
    line-height: 2rem;
}
nav a{
    /* line-height: 4rem; */
}
button,
.btn{
    letter-spacing: .2rem;
}
/*******************************************/
/*! TEXT ALIGN
/*******************************************/
.text-center{
    text-align: center;
}
.text-right{
    text-align: right;
}
.text-left{
    text-align: left;
}
table{
    text-align: left;
}
.vert-align-base{
    vertical-align: baseline;
}
.align-items-base{
    align-items: baseline;
}
.align-items-center{
    align-items: center;
}
td{
    text-wrap: nowrap;
}
/*******************************************/
/*! BACKGROUND COLORS
/*******************************************/
html {
    background-color: #0f0f0f;
}
input,
textarea{
    /* background-color: #626262; */
    background-color: #0f0f0f;
}
button,
.btn{
    background-color: #0f0f0f;
    /* background-color: #ff00c843; */
}
button:hover,
.btn:hover{
    background-color: #52FD61;
}
.alert{
    background-color: #ff0000;
}
.border-t-b:hover{
    /* background-color: #4c4545; */
}
.custom-select select{
    background-color: #0f0f0f;
}
/*******************************************/
/*! TEXT COLORS
/*******************************************/
body{
    color: #fff;
}
input,
textarea{
    color: #fff;
}
button,
.btn{
    color: #ffffff;
}
button:hover,
.btn:hover{
    color: #261b1b;
}
nav a,
a{
    color: inherit;
}
thead{
    color: #ff0000;
}
.neon-green{
    color: #52FD61;
}
.neon-yellow{
    color: #e9ff5c;
}
.neon-pink{
    color: #ff00c8;
}
.very-light-grey{
    color: #ffffff;
}
.red{
    color: #ff5e5e;
}
.blue{
    color: #91d1ff;
}
.black{
    color: #0f0f0f;
}
.medium-grey{
    color: #372f2f;
}
.gray{
    color: #c1c1c1;
}
.alert{
    color: #fff;
}
.glow:hover {
    -webkit-animation: glow 1s ease-in-out infinite alternate;
    -moz-animation: glow 1s ease-in-out infinite alternate;
    animation: glow 1s ease-in-out infinite alternate;
}
@-webkit-keyframes glow {
    from {
      text-shadow: 0 0 20px #fff, 0 0 20px #fff, 0 0 20px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 6px #e60073, 0 0 7px #e60073;
    }
    to {
      text-shadow: 0 0 2px #fff, 0 0 3px #ff4da6, 0 0 4px #ff4da6, 0 0 5px #ff4da6, 0 0 60px #ff4da6, 0 0 7px #ff4da6, 0 0 8px #ff4da6;
    }
}
.box-glow {
    /* background-color:  rgba(45, 213, 255, 0.192); */
    /* -webkit-animation: glow 1s ease-in-out infinite alternate;
    -moz-animation: glow 1s ease-in-out infinite alternate;
    animation: glow 1s ease-in-out infinite alternate; */
    -webkit-box-shadow:0px 0px 192px 1px rgba(45, 167, 255, 0.395);
    -moz-box-shadow: 0px 0px 192px 1px rgba(45, 255, 185, 0.414);
    box-shadow: 0px 0px 192px 1px rgba(45, 255, 241, 0.413);
}
/* @-webkit-keyframes glow {
    
    from {
        box-shadow: 0 0 20px #fff, 0 0 40px #fff, 0 0 20px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 35px #e60073, 0 0 50px #e60073;
    }
    to {
        box-shadow: 0 0 35px #fff, 0 0 50px #fff, 0 0 40px #ff4da6, 0 0 55px #ff4da6, 0 0 40px #ff4da6, 0 0 30px #ff4da6, 0 0 50px #ff4da6;
      }
} */
.hidden{
    visibility: hidden;
}
.custom-select select{
    color: #52FD61;    
}
/*******************************************/
/*! TEXT DECORATION
/*******************************************/
nav a,
footer a{
    /* text-decoration: underline; */
    /* text-decoration-thickness: 15%; */
}
nav a:hover,
footer a:hover{
    text-decoration: underline;
    text-decoration-thickness: 25%;
}
a{
    text-decoration: none;
}
a:hover{
    text-decoration: none;
}
.upper,
button,
.btn{
    /* text-transform: uppercase; */
}
.italic{
    font-style: italic;
}
/*******************************************/
/*! LAYOUT
/*******************************************/
.flx{
    display: flex;
}
.row{
    flex-direction: row;
}
.col{
    flex-direction: column;
}
.flx-start{
    justify-content: flex-start;
}
.gap-1 {
    gap: 1rem;
}
.gap-2 {
    gap: 2rem;
}
.gap-3 {
    gap: 3rem;
}
.gap-4 {
    gap: 4rem;
}
.gap-5 {
    gap: 5rem;
}
.flx-1{
    flex: 1;
}
.flx-2{
    flex: 2;
}
.flx-3{
    flex: 3;
}
.space-evenly{
    justify-content: space-evenly;
}
.space-between{
    justify-content: space-between;
}
/*******************************************/
/*! WIDTHS & HEIGHTHS
/*******************************************/
body{
    width: 1000px;
}
header,
main,
footer{
    width: 1000px;
    overflow:hidden;
}
header{
    height: 136px;
}
.main-height{
    height: 200px;
    overflow: hidden;
}
footer{
    height: 136px;
}
input{
    width: 100%;
    height: 28px;
}
button,
.btn{
    width: 100%;
}
#login,
#reg{
    width: 50%;
}
.big-section{
    overflow: hidden;
    width: 600px;
}
/* .half-section{
    width: 50%;
    height: inherit;
} */
.sml-section{
    width: 300px;
    /* height: inherit; */
}
.alert{
    width: 1000px;
}
/*******************************************/
/*! PADDING & MARGIN
/*******************************************/
body {
    /* padding: 30px; */
    margin: 0 auto;
}
header,
footer{
    padding-top: 20px;
}
input,
textarea{
    padding-left: 18px;
}
.pd-10{
    padding: 10px;
}
.pd-l-10{
    padding-left: 15px;
}
.pd-l-20{
    padding-left: 20px;
}
.mt{
    margin-top: 20px;
}
.mb{
    margin-bottom: 20px;
}
.ml{
    margin-left: 15px;
}
button,
.btn{
    padding: 10px;
    margin-top: 20px;
}
.custom-select select{
    padding: 10px;
}
.alert{
    padding: 10px;
}
/*******************************************/
/*! BORDERS
/*******************************************/
/* #login,
#reg,
.big-section,
.half-section,
.sml-section{
    border: 3px dashed #52FD61;
    border-radius: 1rem;
} */
main{
    /* border-radius: 20px; */
}
input,
textarea{
    border-bottom: 1px solid #c1c1c1;
}
button,
.btn{
    /* border: none; */
    border: 1px dashed #ff00c8;
}
.border-t-none,
.border-t-none:active{
    border-top: none;
}
.border-r-none,
.border-r-none:active{
    border-right: none;
}
.border-l-none,
.border-l-none:active{
    border-left: none;
}
/* ... */

